# Vidbyte-NeuroKit

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
libs/config/: __init__.py  config_loader.py  tribe_runner.yaml
libs/dataclasses/: __init__.py  format_request.py  prediction_result.py  prepared_input.py  provider_models.py  translation_report.py  tribe_analysis.py  tribe_config.py
libs/enums/: __init__.py  data_format.py  input_kind.py  provider_base_url.py  suffixes.py  translation_output_key.py  tribe_analysis.py
libs/protocols/: __init__.py  events_dataframe_provider.py  tribe_model_backend.py
libs/providers/: __init__.py  base_credentials.py  connection_store.py  http_client.py
libs/providers/dropbox/: __init__.py  credentials.py  provider.py
libs/utils/: __init__.py  data_input.py  local_file_exporter.py  local_file_manager.py  tribe_runner_utils.py  tribe_utils.py
memory/add-cli-and-env-config/: internalization.md
memory/address-pr-1-comments/: critique.md  internalization.md  quality.md
memory/address-pr2-comment/: internalization.md
memory/setup-tribe-repo/: internalization.md
scripts/: README.md  run_tribe.py
services/inference/: __init__.py  inference_workflow_coordinator.py  tribe_runner.py
services/providers/: __init__.py  base.py  dropbox_runner.py  google_drive_runner.py  meta_marketing_runner.py  slack_runner.py  vimeo_runner.py
tests/: test_cli.py  test_config_loader.py  test_data_input.py  test_formatter.py  test_provider_cli.py  test_tribe_runner.py  test_tribe_runner_utils.py
(+33 files in other folders)
